crates/ars-collections/tests/ui/tab_key_empty_enum.rs
use ars_collections::TabKey;

#[derive(Clone, Copy, Debug, PartialEq, Eq, PartialOrd, Ord, TabKey)]
enum BadTab {}

fn main() {}
